--- a/template/contact.html
+++ b/template/contact.html
@@ -20,7 +20,7 @@
 <body>
     <!-- Nav Bar -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand mr-5" href="index.html">TheCloudHeros</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
