--- a/template/search.html
+++ b/template/search.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The-CloudHeros</title>
-    <link rel="stylesheet" href="./bootstrap/css/bootstrap.css" />
-    <link rel="stylesheet" href="./style/index.css" />
+    <title>The-CloudHeros - serach</title>
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="../style/search.css" />
 
-    <link rel="stylesheet" href="./ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="./fonts/fontawesome-free-5.12.0-web/css/all.css" />
+    <link rel="stylesheet" href="../ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="../fonts/fontawesome-free-5.12.0-web/css/all.css" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io (5)/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io (5)/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io (5)/favicon-16x16.png">
-    <link rel="manifest" href="./favicon_io (5)/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io (5)/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io (5)/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io (5)/favicon-16x16.png">
+    <link rel="manifest" href="../favicon_io (5)/site.webmanifest">
 
 </head>
 
@@ -178,69 +178,27 @@
                     </form>
                 </div>
 
-
-
-
-
             </div>
         </div>
     </nav>
 
 
-
-
-
-
-
-
-
-
-
-
-
-    <!-- Header -->
-
-    <header class="headerPart">
-        <div class="header-container">
-            <div class="header-left-section">
-
-
-
-                <div class="anchor_div">
-                    <a class="header-anchor" href="./template/details.html">Windows10</a> <span
-                        class="anchor_span">,</span>
-                    <a class="header-anchor" href="./template/details.html">Windows11</a><span
-                        class="anchor_span">,</span>
-                    <a class="header-anchor" href="./template/details.html">Windows365</a>
-                </div>
-
-
-                <h1 class="main-heading">Microsoft Unveils Windows 11, <br> A Desktop in the Cloud</h1>
-                <p class="header-paragraph text-justify">This week, Microsoft is hosting its virtual Inspire conference
-                    where the
-                    company unveils solutions
-                    and tools for their partners to help them build services on top of the company's platforms. For FY
-                    2022, Microsoft is unveiling Windows..</p>
-            </div>
-            <div class="header-right-setion">
-                <img src="./assets/undraw_uploading_go67_copy2.png" height="410px" width="auto" alt="header-image"
-                    class="header-image" />
-            </div>
-            <div class="blueDiv container-fluid mt-5">
-                <br>
+    <section class="container-fluid resultdiv">
+        <div class="searchPart card">
+            <div class="serachinner card-header ">
+                <h2 class="h2-result container">Search result for : <span class="text-danger">"Home"</span></h2>
             </div>
         </div>
-    </header>
+    </section>
 
-    <br><br><br>
-    <!-- blue Div -->
 
+    <!-- title show -->
     <section class="postSection mt-5">
         <div class="container">
             <div class="card  border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px"
                                 width="300px" class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left">
@@ -259,26 +217,7 @@
             <div class="card  border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px"
-                                width="300px" class="img-fluid img-post" alt=""></a>
-                    </div>
-                    <div class="col-md-6 float-left ">
-                        <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
-                        <h1 class="postSection-heading-anchor"><a href="./template/details.html">Microsoft's Investment
-                                in Rubrik is a Shakeup
-                                for the Industry</a></h1>
-                        <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
-                        <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
-                            will likely shakeup the industry. Rubrik, a company that.</p>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="card  border-0">
-                <div class="card-body row card-position">
-                    <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px"
                                 width="300px" class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
@@ -298,28 +237,7 @@
             <div class="card  border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px"
-                                width="300px" class="img-fluid img-post" alt=""></a>
-                    </div>
-                    <div class="col-md-6 float-left ">
-                        <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
-                        <h1 class="postSection-heading-anchor"><a href="./template/details.html">Microsoft's Investment
-                                in Rubrik is a Shakeup
-                                for the Industry</a></h1>
-                        <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
-                        <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
-                            will likely shakeup the industry. Rubrik, a company that.</p>
-                    </div>
-                </div>
-            </div>
-
-
-
-
-            <div class="card  border-0">
-                <div class="card-body row card-position">
-                    <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px"
                                 width="300px" class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
@@ -338,11 +256,10 @@
 
 
 
-
             <div class="card  border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px"
                                 width="300px" class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
@@ -361,11 +278,10 @@
 
 
 
-
             <div class="card  border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px"
                                 width="300px" class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
@@ -384,11 +300,10 @@
 
 
 
-
             <div class="card  border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px"
                                 width="300px" class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
@@ -407,11 +322,29 @@
 
 
 
+            <div class="card  border-0">
+                <div class="card-body row card-position">
+                    <div class="card-img col-md-4 float-left text-center">
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px"
+                                width="300px" class="img-fluid img-post" alt=""></a>
+                    </div>
+                    <div class="col-md-6 float-left ">
+                        <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
+                        <h1 class="postSection-heading-anchor"><a href="./template/details.html">Microsoft's Investment
+                                in Rubrik is a Shakeup
+                                for the Industry</a></h1>
+                        <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
+                        <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
+                            will likely shakeup the industry. Rubrik, a company that.</p>
+                    </div>
+                </div>
+            </div>
+
 
             <div class="card  border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px"
                                 width="300px" class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
@@ -431,7 +364,27 @@
             <div class="card  border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px"
+                                width="300px" class="img-fluid img-post" alt=""></a>
+                    </div>
+                    <div class="col-md-6 float-left ">
+                        <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
+                        <h1 class="postSection-heading-anchor"><a href="./template/details.html">Microsoft's Investment
+                                in Rubrik is a Shakeup
+                                for the Industry</a></h1>
+                        <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
+                        <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
+                            will likely shakeup the industry. Rubrik, a company that.</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="card  border-0">
+                <div class="card-body row card-position">
+                    <div class="card-img col-md-4 float-left text-center">
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px"
                                 width="300px" class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
@@ -462,24 +415,6 @@
     </section>
 
 
-    <!-- NewsLetter -->
-    <section class="newsLetter ">
-
-        <div class="newsLetter-div">
-            <div class="titlefield">
-                <h1 class="newsLetter-heading">SUBSCRIBE TO CLOUDHEROS NEWSLETTERS</h1>
-                <p class="newsLetter-paragraph">Whether it’s Security or Cloud Computing, we have the know-how for you.
-                    <br> Sign up for our newsletters here.</p>
-            </div>
-
-            <div class="emailfield">
-                <form action="" class="form">
-                    <input class="form-control" required type="email" placeholder="Email">
-                    <button class="btn btn-newsLetter">Subscribe</button>
-                </form>
-            </div>
-        </div>
-    </section>
 
 
     <!-- Footer -->
@@ -488,7 +423,7 @@
     <footer class="footer">
         <div class="footer__logo__box">
 
-            <img src="./assets/IMG_2250.PNG" alt="" width="300px" class="footer-logo" />
+            <img src="../assets/IMG_2250.PNG" alt="" width="300px" class="footer-logo" />
 
         </div>
         <div class="container ">
@@ -531,10 +466,12 @@
                     <p class="follower-title">© 2021 Danish Software Group</p> <a class="folloer-ploiy"
                         href="./template/contact.html">Privacy
                         Policy</a./template/contact.html </div> </div> </footer> <script
-                            src="./bootstrap/jquery-3.5.1.min.js">
+                            src="../bootstrap/jquery-3.5.1.min.js">
                         </script>
-                        <script src="./style/serach.js"></script>
-                        <script src="./bootstrap/js/bootstrap.js"></script>
+                        <script src="../style/serach.js"></script>
+                        <script src="../bootstrap/js/bootstrap.js"></script>
+
+
 
 </body>
 
