--- a/template/details.html
+++ b/template/details.html
@@ -21,7 +21,7 @@
 <body>
     <!-- Nav Bar -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand mr-5" href="index.html">TheCloudHeros</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -172,7 +172,7 @@
     <!-- Deatils -->
 
 
-    <main class="container-fluid main-single-content mt-4">
+    <main class="container-fluid main-single-content ">
         <section class="row sinlge-content p-5">
             <div class="col-md-8 left-single-content p-4">
                 <div class="sinlge-content-title">
