--- a/template/search.html
+++ b/template/search.html
@@ -34,10 +34,10 @@
 
                 <!-- small screen serach box -->
                 <div>
-                    <form onsubmit="event.preventDefault();" role="search" class="SmallScreen form-small-serach">
+                    <form onsubmit="" role="search" class="SmallScreen form-small-serach">
                         <label for="search2">Search for stuff</label>
-                        <input id="search2" type="search" placeholder="Search..." autofocus required />
-                        <i type="submit" class="fa fa-search"></i>
+                        <input id="search2" type="text" placeholder="Search..." autofocus required />
+                        <button type="submit" class="fa fa-search"></button>
                     </form>
                     <hr>
                 </div>
@@ -399,9 +399,9 @@
                 </div>
             </div>
 
-            <!-- pagination -->
+    <!-- pagination -->
 
-            <nav aria-label="Page navigation example" class="pagination-nav">
+    <nav aria-label="Page navigation example" class="pagination-nav">
 
                 <ul class="pagination justify-content-center pagination-lg">
                     <li class="page-item disabled" tabindex="-1"><a href="#"
@@ -420,7 +420,7 @@
     <!-- Footer -->
 
 
-    <footer class="footer">
+    <footer class="footer ">
         <div class="footer__logo__box">
 
             <img src="../assets/IMG_2250.PNG" alt="" width="300px" class="footer-logo" />
@@ -463,13 +463,16 @@
                     <a class="icon" href="#"><i class="fab fa-google-plus-g"></i></a>
                 </div>
                 <div>
-                    <p class="follower-title">© 2021 Danish Software Group</p> <a class="folloer-ploiy"
-                        href="./template/contact.html">Privacy
-                        Policy</a./template/contact.html </div> </div> </footer> <script
-                            src="../bootstrap/jquery-3.5.1.min.js">
-                        </script>
-                        <script src="../style/serach.js"></script>
-                        <script src="../bootstrap/js/bootstrap.js"></script>
+                    <p class="follower-title">© 2021 Danish Software Group</p>
+                    <a class="folloer-ploiy" href="./template/contact.html">PrivacyPolicy</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="../bootstrap/jquery-3.5.1.min.js">
+    </script>
+    <script src="../style/serach.js"></script>
+    <script src="../bootstrap/js/bootstrap.js"></script>
 
 
 
