footer fixed and invalid & valid html added

--- a/template/search.html
+++ b/template/search.html
@@ -426,8 +426,8 @@
             <img src="../assets/IMG_2250.PNG" alt="" width="300px" class="footer-logo" />
 
         </div>
-        <div class="container ">
-            <div class="row">
+        <div class="footer-container ">
+            <div class="footer-row">
                 <div class="col-md-6 float-left">
                     <div class="footer__navigation">
                         <ul class="footer__list">
