--- a/template/login.html
+++ b/template/login.html
@@ -5,12 +5,13 @@
 	<title>TheCloudHeros - Login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css"
-		href="../ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" type="text/css"
+		href="../ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css"> -->
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../fonts/material-icon/css/material-design-iconic-font.min.css">
 
