--- a/template/signup.html
+++ b/template/signup.html
@@ -8,8 +8,9 @@
 
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css"
-		href="../ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+	<!-- <link rel="stylesheet" type="text/css"
+		href="../ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css"> -->
 	<link rel="stylesheet" type="text/css"
 		href="../ResgistretionFiles/fonts/iconic/css/material-design-iconic-font.min.css">
 
